--- a/libs/datepicker/package.json
+++ b/libs/datepicker/package.json
@@ -4,10 +4,10 @@
   "peerDependencies": {
     "@angular/common": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/forms": "^17.3.0",
+    "@nx/angular": "^18.2.0",
     "moment": "^2.30.1"
   },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
+  "dependencies": {},
   "sideEffects": false
 }
