--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@angular/cli": "~17.3.0",
     "@angular/compiler-cli": "~17.3.0",
     "@angular/language-service": "~17.3.0",
+    "@nx/eslint": "18.2.3",
+    "@nx/eslint-plugin": "^18.2.3",
     "@nx/jest": "18.2.3",
     "@nx/js": "18.2.3",
     "@nx/playwright": "^18.2.3",
@@ -40,6 +42,8 @@
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "autoprefixer": "^10.4.0",
